Added tons of recipes

--- a/src/main/resources/assets/voidrpg/lang/en_US.lang
+++ b/src/main/resources/assets/voidrpg/lang/en_US.lang
@@ -16,6 +16,28 @@ item.speedI.name=Speed I Upgrade
 item.speedII.name=Speed II Upgrade
 item.speedIII.name=Speed III Upgrade
 item.upgrade.name=Upgrade
+item.heavyArmorPlate.name=Heavy Armor Plate
+item.basicArmorPlate.name=Basic Armor Plate
+item.cardboard.name=Cardboard
+item.reactiveArmorPlating.name=Reactive Armor Plating
+item.regenerativeArmorPlating.name=Regenerative Armor Plating
+item.energyArmorPlating.name=Energy Armor Plating
+item.carbonChunk.name=Carbon Chunk
+item.flippers.name=Flippers
+item.nanoTech.name=Nano Tech
+item.mechanicalMuscle.name=Mechanical Muscle
+item.gravityCore.name=Gravity Core
+item.goggles.name=Goggles
+item.jetpackParts.name=Jetpack Parts
+item.thruster.name=Thruster
+item.waterElectrolysisModule.name=Water Electrolysis Module
+item.mindControl.name=Mind control
+item.wings.name=Wings
+item.battery.name=Battery
+item.solarPanel.name=Solar Panel
+item.smallReactor.name=Small reactor
+item.largeReactor.name=Large reactor
+item.repairBot.name=Repair Bot
 
 # Blocks
 tile.armorLight.name=Light Armor Block
