Some more texture work still a ways to go though

--- a/src/main/resources/assets/voidrpg/lang/en_US.lang
+++ b/src/main/resources/assets/voidrpg/lang/en_US.lang
@@ -53,20 +53,20 @@ tile.cubeJetpack.name=Jetpack Cube block
 tile.cubeWaterBreathing.name=Water Breathing Cube
 tile.cubeMobStealth.name=Mob Stealth Cube
 tile.cubeWing.name=Cube of Wings
-tile.armorEnergyShieldI.name=Energy Shield I
+tile.energyShieldI.name=Energy Shield I
 tile.armorCardboard.name=Cardboard
 tile.armorNanoTech.name=Cube of Nano Cubes
-tile.armorEnergyShieldII.name=Energy Shield II
+tile.energyShieldII.name=Energy Shield II
 tile.armorWood.name=Block of Wood Cubes
 tile.armorCarbon.name=Block of Carbon Cubes
 tile.armorHeavy.name=Heavy Armor Block
 tile.armorLife.name=Block of Life
-tile.armorEnergyShieldIII.name=Energy Shield III
+tile.energyShieldIII.name=Energy Shield III
 tile.armorBoom.name=Block of Boom Cube
 tile.armorActivePlating.name=Block of Active Plating
 tile.energyStorageI.name=Energy Storage I
 tile.energySolarIII.name=Solar III
-tile.energyStorageII.name=Solar II
+tile.energyStorageII.name=Energy Storage II
 tile.energyTurret.name=Turret Block
 tile.energyAutoRepairIII.name=Auto-Repair III
 tile.energyStorageIII.name=Energy Storage III
