More work on textures

--- a/src/main/resources/assets/voidrpg/lang/en_US.lang
+++ b/src/main/resources/assets/voidrpg/lang/en_US.lang
@@ -34,7 +34,7 @@ item.waterElectrolysisModule.name=Water Electrolysis Module
 item.mindControl.name=Mind control
 item.wings.name=Wings
 item.battery.name=Battery
-item.solarPanel.name=Solar Panel
+item.solarPanel.name=Solar Cell
 item.smallReactor.name=Small reactor
 item.largeReactor.name=Large reactor
 item.repairBot.name=Repair Bot
