Added lots of diffrent Localization

--- a/src/main/resources/assets/voidrpg/lang/en_US.lang
+++ b/src/main/resources/assets/voidrpg/lang/en_US.lang
@@ -164,6 +164,8 @@ cube.decoWoolBrown.description=This is just an basic brown cube.
 cube.decoWoolGreen.description=This is just an basic green cube.
 cube.decoWoolRed.description=This is just an basic red cube.
 cube.decoWoolBlack.description=This is just an basic black cube.
+cube.decoDiamond.description=This is just an basic deco cube thats made out of diamonds.
+cube.decoEmerald.description=This is just an basic deco cube thats made out of emeralds.
 cube.carbonArmor.description=Made out of strong carbon bonds this armor block is quite durable and protective.
 cube.woodArmor.description=Created out of logs its not strong or durable but its cheap and more protective then cardboard.
 cube.cardBoardArmor.description=Made out of cardboard its basicly useless but its better than nothing.
