Fixed Server Support

--- a/src/main/resources/assets/voidrpg/lang/en_US.lang
+++ b/src/main/resources/assets/voidrpg/lang/en_US.lang
@@ -188,3 +188,4 @@ cube.kenetic.description=As you walk it will generate power.
 cube.autoRepairII.description=Repairs Damages cubes faster then the Mk. 1
 cube.autoRepairIII.description=Repairs Damages cubes faster then the Mk. 2
 cube.stealth.description=Gives you unlimited invisibility.
+stat.invalid.name=Invalid Item NBT,Please Report This Bug On Github.
